--- a/jazzer/Dockerfile
+++ b/jazzer/Dockerfile
@@ -3,5 +3,5 @@ COPY * /usr/bin/
 RUN mkdir -p /corpus
 ENV LD_LIBRARY_PATH /usr/local/openjdk-11/lib/server
 
-LABEL LANGUAGES "java, jvm-based"
+LABEL LANGUAGES "java, kotlin, jvm-based"
 LABEL FUZZER "libfuzzer"
