--- a/libfuzzer/Dockerfile
+++ b/libfuzzer/Dockerfile
@@ -3,4 +3,4 @@ RUN apt-get update && \
     apt-get install -fy clang libfuzzer-7-dev libc6-dbg
 
 LABEL LANGUAGES "c, c++"
-LABEL FUZZER "libfuzzer"
+LABEL FUZZERCLASS "libfuzzer"
