--- a/jazzer/Dockerfile
+++ b/jazzer/Dockerfile
@@ -4,4 +4,4 @@ RUN mkdir -p /corpus
 ENV LD_LIBRARY_PATH /usr/local/openjdk-11/lib/server
 
 LABEL LANGUAGES "java, kotlin, jvm-based"
-LABEL FUZZER "libfuzzer"
+LABEL FUZZERCLASS "libfuzzer"
