--- a/libfuzzer/Dockerfile
+++ b/libfuzzer/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:stable-slim
+FROM debian:buster-slim
 RUN apt-get update && \
     apt-get install -fy clang libfuzzer-7-dev libc6-dbg
 
