--- a/atheris/Dockerfile
+++ b/atheris/Dockerfile
@@ -1,4 +1,7 @@
-FROM weldpua2008/atheris
+FROM debian:bullseye-slim
+RUN apt-get update && \
+    apt-get install -y python3 python3-pip && \
+    pip3 install atheris
 RUN mkdir -p /corpus
 
 LABEL LANGUAGES "python"
