--- a/honggfuzz/Dockerfile
+++ b/honggfuzz/Dockerfile
@@ -1,10 +1,11 @@
-FROM debian:buster-slim
+FROM debian:bookworm-slim
+ARG TAG=2.6
 RUN apt-get update && \
-    apt-get install -fy make curl build-essential binutils-dev libunwind-dev clang afl=2.52b-5 libc6-dbg && \
-    rm -rf /var/lib/apt/lists/* && mkdir -p /corpus && \
-    curl -L -o honggfuzz-1.9.tgz https://github.com/google/honggfuzz/archive/1.9.tar.gz && \
-    tar zxf honggfuzz-1.9.tgz && \
-    cd honggfuzz-1.9 && \
+    apt-get install -fy make curl build-essential build-essential binutils-dev libunwind-dev libblocksruntime-dev clang && \
+    rm -rf /var/lib/apt/lists/* && mkdir -p /testsuite && \
+    curl -L -o honggfuzz-${TAG}.tgz https://github.com/google/honggfuzz/archive/${TAG}.tar.gz && \
+    tar zxf honggfuzz-${TAG}.tgz && \
+    cd honggfuzz-${TAG} && \
     make && \
     make install
 
